Update code with music-comons 0.5.0 and lirp 2.3.0